test/types/file/invalidMode.good
invalidMode.chpl:4: error: halt reached - ***Error: Unable to open "./anyFile.txt": Invalid argument***
