test/types/file/invalidMode.chpl
var myInt: int;
var f: file = new file(filename = "anyFile.txt", mode = "q");

f.open();
f.write(myInt);
